--- a/index.css
+++ b/index.css
@@ -7,23 +7,17 @@
   transition: .1s ease;
 }
 
-:root {
-  --light-gray: #b8b8bb;
-  --gray: #75757a;
-  --dark-gray: #3c4043;
-  --white: #f1f3f4;
-  --blue: #000000;
+:root {* {
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
 }
-
-ion-icon {
-  font-size: 20px;
-}
-
-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+}
+* {
   width: 100vw;
   height: 100vh;
   padding: 1rem;
@@ -90,6 +84,199 @@ button:active {
   flex-direction: column;
   width: 220px;
   height: 220px;
+input {
+  border: none;
+  font-size: 14px;
+  padding: .5rem 1rem;
+  outline: solid 1px var(--light-gray);
+}
+input:focus {
+  outline: solid 2px var(--blue);
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  border: none;
+  cursor: pointer;
+  padding: 1rem;
+  font-size: 16px;
+
+  color: var(--white);
+  outline: solid 2px var(--blue2);
+  background: var(--blue);
+}
+button:hover {
+  color: var(--dark-gray);
+  background: var(--light-gray);
+  outline: solid 2px var(--gray);
+}
+button:active {
+  color: var(--white);
+  background: var(--gray);
+  outline: solid 2px var(--dark-gray);
+}
+
+.preview-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  gap: 1rem;
+}
+
+.preview-container input {
+  /* width: 100%; */
+}
+
+.card-img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 220px;
+  height: 220px;;
+  --white: #f1f3f4;
+  --blue: #000000;
+}
+
+ion-icon {
+  font-size: 20px;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+}
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+}
+
+input {
+  border: none;
+  font-size: 14px;
+  padding: .5rem 1rem;
+  outline: solid 1px var(--light-gray);
+}
+input:focus {
+  outline: solid 2px var(--blue);
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  border: none;
+  cursor: pointer;
+  padding: 1rem;
+  font-size: 16px;
+
+  color: var(--white);
+  outline: solid 2px var(--blue2);
+  background: var(--blue);
+}
+button:hover {
+  color: var(--dark-gray);
+  background: var(--light* {
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+}
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+}
+
+input {
+  border: none;
+  font-size: 14px;
+  padding: .5rem 1rem;
+  outline: solid 1px var(--light-gray);
+}
+input:focus {
+  outline: solid 2px var(--blue);
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  border: none;
+  cursor: pointer;
+  padding: 1rem;
+  font-size: 16px;
+
+  color: var(--white);
+  outline: solid 2px var(--blue2);
+  background: var(--blue);
+}
+button:hover {
+  color: var(--dark-gray);
+  background: var(--light-gray);
+  outline: solid 2px var(--gray);
+}
+button:active {
+  color: var(--white);
+  background: var(--gray);
+  outline: solid 2px var(--dark-gray);
+}
+
+.preview-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  gap: 1rem;
+}
+
+.preview-container input {
+  /* width: 100%; */
+}
+
+.card-img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 220px;
+  height: 220px;
+.preview-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  gap: 1rem;
+}
+
+.preview-container input {
+  /* width: 100%; */
+}
+
+.card-img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 220px;
+  height: 220px;
 }
 .card-img:hover .card-hoverImg {
   display: flex;
@@ -110,7 +297,7 @@ button:active {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  border-radius: 12px;
+  border-radius: 5%;
 }
 
 
